<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/post_image_profile"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/post_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/post_image_profile"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@id/post_image_profile"
        android:text="@string/text_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/post_text_datetime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/post_text_name"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@id/post_image_profile"
        android:text="@string/text_date" />

    <ImageView
        android:id="@+id/post_image_post"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_below="@id/post_image_profile"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/text_description"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/post_text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/post_image_post"
        android:layout_margin="10dp"
        android:maxLines="4"
        android:text="@string/text_content"
        android:textColor="@color/black" />

    <LinearLayout
        android:id="@+id/post_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/post_text_description"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/post_button_like"
            style="?android:borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_thumb_up_black_24dp"
            android:text="@string/text_like"
            android:textColor="#bf000000" />

        <Button
            android:id="@+id/post_button_comment"
            style="?android:borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_comment_black_24dp"
            android:text="@string/text_comment"
            android:textColor="#bf000000" />
    </LinearLayout>
</RelativeLayout>